[tool.isort]
profile = "black"

[tool.poetry]
name = "syncerr"
version = "0.1.0"
description = "sync watched video between plex and jellyfin"
authors = ["Dhruvin Shah <dhruvin3@gmail.com>"]
license = "GPL3"

[tool.poetry.dependencies]
python = "^3.10"
omegaconf = "^2.2.3"
httpx = "^0.23.0"
pydantic = "^1.10.2"

[tool.poetry.dev-dependencies]
black = ">=22.8.0"
mypy = ">=0.971"
isort = ">=5.10.1"
pylint = ">=2.15.2"

[tool.pylint]
disable = ["R0903"]

[tool.pylint.format]
max-line-length = "88"

[tool.pylint.message_control]
extension-pkg-whitelist = "pydantic"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
