[tool.isort]
profile = "black"

[tool.poetry]
name = "syncerr"
version = "0.1.0"
description = "sync watched video between plex and jellyfin"
authors = ["Dhruvin Shah <dhruvin3@gmail.com>"]
license = "GPL3"

[tool.poetry.dependencies]
python = "^3.10"
omegaconf = "^2.2.3"
httpx = "^0.23.0"
pydantic = "^1.10.2"

[tool.poetry.group.dev.dependencies]
ipython = "^8.14.0"
black = ">=22.8.0"
mypy = ">=0.971"
isort = ">=5.10.1"
ruff = "^0.0.277"

[tool.ruff]
select = [
  "E",  # pycodestyle errors
  "W",  # pycodestyle warnings
  "F",  # pyflakes
  "I",  # isort
  "C",  # flake8-comprehensions
  "B",  # flake8-bugbear
  "D",  # pydocstyle
  "UP", # pyupgrade
]

[tool.ruff.pydocstyle]
convention = "google"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
